portfolio avanzado clase

--- a/portfolio personal/index.html
+++ b/portfolio personal/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -51,7 +50,7 @@
     <section id="inicio" class="inicio">
         <div class="containerINICIO">
             <div class="containerimg">
-                <img src="marioinicio.png" alt="">
+                <img src="unnamed.png" alt="">
             </div>
             <h1>MARIO CORTES CANTIN</h1>
             <h2>Estudiante de Desarrollo Multiplataforma</h2>
@@ -125,12 +124,17 @@
         <div class="containerGALERIA">
             <h1>GALERÍA</h1>
             <div class="containerimg">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="GATOS.jpg" alt="">
+                <img src="ORDESA.jpg" alt="">
+                <img src="ZARAGOZA.jpg" alt="">
+                <img src="RAQUEL.jpg" alt="">
+                <img src="AMIGOSJACA.jpg" alt="">
+                <img src="NORIEL.jpg" alt="">
+                <img src="futbol.jpg" alt="">
+                <img src="setas.jpg" alt="">
+                <img src="gradu.jpg" alt="">
+                <img src="jaca2.jpg" alt="">
+
             </div>
         </div>
 
@@ -169,5 +173,4 @@
     </section>  
 </body>
 </html>
-
 
