--- a/portfolio personal/index.html
+++ b/portfolio personal/index.html
@@ -114,6 +114,10 @@
                             <i class="fa-solid fa-tent"></i>
                             <span>Acampar</span>
                         </div>
+                        <div class="hobbies">
+                            <i class="fa-solid fa-martini-glass-citrus"></i>
+                            <span>Fiesta</span>
+                        </div>
                     </div>
             </div>
     </section>
@@ -124,17 +128,41 @@
         <div class="containerGALERIA">
             <h1>GALERÍA</h1>
             <div class="containerimg">
+                <div class="col">
                 <img src="GATOS.jpg" alt="">
-                <img src="ORDESA.jpg" alt="">
+            </div>
+                <div class="col">
+                <img src="ordesa2.jpg" alt="">  
+            </div>
+                <div class="col">
                 <img src="ZARAGOZA.jpg" alt="">
+            </div>
+                <div class="col">
                 <img src="RAQUEL.jpg" alt="">
+            </div>
+                <div class="col">
                 <img src="AMIGOSJACA.jpg" alt="">
+            </div>
+                <div class="col">
                 <img src="NORIEL.jpg" alt="">
-                <img src="futbol.jpg" alt="">
+            </div>
+                <div class="col">
+                <img src="futbol2.JPG" alt="">     
+            </div>
+                <div class="col">
                 <img src="setas.jpg" alt="">
+            </div>
+                <div class="col">
                 <img src="gradu.jpg" alt="">
+            </div>
+                <div class="col">
                 <img src="jaca2.jpg" alt="">
-
+            </div>
+                <div class="col">
+                <img src="ZARAGOZA.jpg" alt="">
+            </div>
+                
+                </div>
             </div>
         </div>
 
